--- a/templates/_base.html
+++ b/templates/_base.html
@@ -104,7 +104,15 @@
 
    <div id="bodycontent">
       {% block bodycontent %}
-           Replace this
+           <div class="container">
+             <h2>Bienvenido</h2>
+             <h4>
+               La paltaforma CEATyP libre desarrollada por alumnos del ITC en su materia de Servicios en la Nube,
+               cuyo objetivo es la de poder ayudar a los estudiantes
+               a poder administrar diversas cosas tales como sus finanzas, sus tareas
+               escolares y eventos del calendario de google
+             </h4>
+           </div>
       {% endblock %}
    </div>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
