Refinación y optimización de codigo

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -14,8 +14,10 @@
    <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script> -->
    <script src="js/jquery.js"></script>
    <script src="js/jquery-ui.js"></script>
+   <script src="js/jquery.datetimepicker.full.js"></script>
    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
    <link rel="stylesheet" href="js/jquery-ui.css">
+   <link rel="stylesheet" type="text/css" href="css/jquery.datetimepicker.css"/>
    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
    <!--[if lt IE 9]>
@@ -31,6 +33,9 @@
      });
    </script>
    <style media="screen">
+   .custom-date-style {
+   	background-color: red !important;
+   }
    .container{
      background-color: white;
    }
