--- a/templates/addcuenta.html
+++ b/templates/addcuenta.html
@@ -8,7 +8,7 @@
         <div class="col-xs-6">
           <div class="form-group">
             <span class="label label-primary">Nombre de la Cuenta</span>
-            <input name="cuenta" type="text" class="form-control">
+            <input name="cuenta" type="text" class="form-control" placeholder="Nombre que tendrá la cuenta">
           </div>
         </div>
       </div>
@@ -18,12 +18,30 @@
             <span class="label label-primary">Saldo Inicial</span>
             <div class="input-group">
               <div class="input-group-addon">$</div>
-              <input type="text" class="form-control" id="exampleInputAmount" name="saldo">
+              <input type="text" class="form-control" id="exampleInputAmount" name="saldo" placeholder="Cantidad inicial de la cuenta">
             </div>
           </div>
         </div>
       </div>
       <button type="submit" name="button" class="btn btn-primary"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>  Guardar</button>
+      <div class="row">
+        <div class="col-xs-6">
+          <div class="form-group">
+            <br>
+            {% if error %}
+            <p class="alert alert-danger">
+              {{error}}
+            </p>
+            {% endif %}
+            {% if success %}
+            <p class="alert alert-success">
+              {{success}}
+            </p>
+            {% endif %}
+            </div>
+          </div>
+        </div>
+      </div>
   </form>
 </div>
 {% endblock %}
