--- a/templates/addtarea.html
+++ b/templates/addtarea.html
@@ -29,6 +29,23 @@
         </div>
       </div>
       <button type="submit" name="button" class="btn btn-primary"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>  Guardar</button>
+      <div class="row">
+        <div class="col-xs-6 col-md-4">
+          <div class="form-group">
+            <br>
+            {% if error %}
+            <p class="alert alert-danger">
+              {{error}}
+            </p>
+            {% endif %}
+            {% if success %}
+            <p class="alert alert-success">
+              {{success}}
+            </p>
+            {% endif %}
+          </div>
+        </div>
+      </div>
   </form>
 </div>
 {% endblock %}
