--- a/templates/index.html
+++ b/templates/index.html
@@ -62,6 +62,11 @@
                <div class="etc-login-form">
                  <p>¿Nuevo usuario? <a href="/register">Crea una nueva cuenta</a></p>
                </div>
+               {% if error %}
+               <p class="alert alert-danger">
+                 {{error}}
+               </p>
+               {% endif %}
              </form>
            </div>
            <!-- end:Main Form -->
